Completed both HTML and CSS sections

--- a/index.html
+++ b/index.html
@@ -2,25 +2,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Roboto+Mono&display=swap" rel="stylesheet">
 <!-- Link your CSS stylesheet -->
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <header>
-    <section id="guide">
       <nav>
         <a class="linkOne" href="#guide">Plan your Visit</a>
         <a class="linkTwo" href="#intro">Learn about the Park</a> 
         <a class="linkThree" href="#about">Get Involved</a> 
       </nav>
+    </header>
+    <body>
+    <section id="guide">
+      <div class="image">
     <img src="assets/header_img.jpg" alt="Image of a mountainous backdrop">
-    <div class="guideTxt">
+      </div>
+    <div class="text">
       <h1>Yosemite Park Guide</h1>
       <p>Come explore California’s beautiful wilderness.</p>
       <p>Always open. Reservations are not available or required to enter the park.</p>
     </div>
     </section>
-  </header>
+  
   <section id="intro">
     <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
     
@@ -36,6 +41,7 @@
     <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
     </div>
   </section>
+</body>
   <footer>
     <section id="footerImg">
   
@@ -46,5 +52,5 @@
     <a class="linkThree" href="#about">Get Involved</a> 
   </nav>
   </footer>  
-</body>
+
 </html>
